# Nyxis-Engine

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Nyxis_Engine.aps  README.md  UnixBuild.sh  WindowsBuild.ps1  compile_shader.sh  compile_shaders.sh
.github/workflows/: codeql.yml
Nyxis_Engine.dir/Release/: Nyxis_Engine.exe.recipe
Nyxis_Engine.dir/Release/Nyxis_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Nyxis_Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Scene/: components.cpp  components.hpp  scene.cpp  scene.hpp
Visual Studio/libs/gli/: CTestTestfile.cmake  gliConfig.cmake  gliTargets.cmake  gliVersion.cmake
Visual Studio/libs/gli/gli/: CTestTestfile.cmake
Visual Studio/libs/gli/test/: CTestTestfile.cmake
Visual Studio/libs/spdlog/Release/: spdlog.lib
assets/styles/: imgui_style.toml
include/: AssimpModel.hpp  Camera.hpp  CameraController.hpp  GLTFModel.hpp  GLTFRenderer.hpp  GltfModel.hpp  ImguiLayer.hpp  Log.hpp  Nyxis.hpp  PhysicsEngine.hpp  RenderSystem.hpp  ResourceManager.hpp  TextureRenderSystem.hpp  ThreadPool.hpp  app.hpp  buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  entityManager.hpp  frameInfo.hpp  gameObject.hpp  imgui.hpp  input.hpp  keyboardInput.hpp  layer.hpp  model.hpp  path.hpp  pipeline.hpp  pointLightSystem.hpp  renderer.hpp  scene.hpp  simpleRenderSystem.hpp  swap_chain.hpp  texture.hpp  utils.hpp  ve.hpp  window.hpp
include/Events/: event.hpp  keyEvents.hpp  mouseEvents.hpp
include/RenderSystems/: ParticleRenderSystem.hpp
libs/imgui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
libs/tinygltf/: license.txt  tiny_gltf.h
libs/tinyobjloader/: tiny_obj_loader.h
models/basic/: sphere.gltf
models/microphone/: license.txt
shaders/: compile_shaders.sh  particle_shader.frag  particle_shader.frag.spv  particle_shader.vert  particle_shader.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  simple_vertex.spv  texture_shader.frag  texture_shader.frag.spv  texture_shader.vert  texture_shader.vert.spv
shaders/pbr/: pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr_khr.frag  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
source/Core/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  FrameInfo.hpp  GLTFRenderer.cpp  GLTFRenderer.hpp  Input.cpp  Input.hpp  Layer.cpp  Layer.hpp  Log.cpp  Log.hpp  Nyxis.hpp  Nyxispch.cpp  Nyxispch.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp  main.cpp
source/Events/: Event.hpp  KeyEvents.hpp  MouseEvents.hpp
source/Graphics/: AssimpModel.cpp  AssimpModel.hpp  GLTFModel.cpp  GLTFModel.hpp  GameObject.cpp  GameObject.hpp  OBJModel.cpp  OBJModel.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Texture.cpp  Texture.hpp
source/NyxisUI/: ComponentViewPanel.cpp  ComponentViewPanel.hpp  EditorLayer.cpp  EditorLayer.hpp  LogPanel.cpp  LogPanel.hpp  MaterialEditorPanel.cpp  MaterialEditorPanel.hpp  MaterialPanel.cpp  MaterialPanel.hpp  MenuBar.cpp  MenuBar.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  Viewport.cpp  Viewport.hpp  Widgets.cpp  Widgets.hpp
source/RenderSystems/: ParticleRenderSystem.cpp  ParticleRenderSystem.hpp  PointLightSystem.cpp  PointLightSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  TextureRenderSystem.cpp  TextureRenderSystem.hpp
source/Scene/: Components.cpp  Components.hpp  NyxisProject.cpp  NyxisProject.hpp  Scene.cpp  Scene.hpp
source/Utils/: Path.hpp  ThreadPool.hpp  Utils.hpp
src/: AssimpModel.cpp  Camera.cpp  CameraController.cpp  GLTFModel.cpp  GLTFRenderer.cpp  GltfModel.cpp  ImguiLayer.cpp  Log.cpp  Nyxispch.hpp  PhysicsEngine.cpp  RenderSystem.cpp  ShadowMapping.cpp  SimpleRenderSystem.cpp  TextureRenderSystem.cpp  app.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  gameObject.cpp  imguiexample.cpp  input.cpp  keyboardInput.cpp  layer.cpp  main.cpp  model.cpp  pipeline.cpp  pointLightSystem.cpp  renderer.cpp  scene.cpp  shadowMapping.cpp  simpleRenderSystem.cpp  simple_render_system.cpp  swap_chain.cpp  texture.cpp  vepch.cpp  window.cpp
src/RenderSystems/: ParticleRenderSystem.cpp
(+14 files in other folders)
